Timeout between two intents can no be configured via config.jsonm

--- a/intents/config.json
+++ b/intents/config.json
@@ -1,5 +1,6 @@
 {
     "dataStore": "~/deepthought/bachelor/AndroidApks/datastore/",
     "outputFolder": "~/deepthought/bachelor/AndroidApks/output/",
-    "androidSDK": "~/Android/Sdk/"
+    "androidSDK": "~/Android/Sdk/",
+    "intentTimeout": 10
 }
