--- a/intents/config.json
+++ b/intents/config.json
@@ -5,21 +5,24 @@
     "intentTimeout": 3,
     "numberIterations": 10,
     "packageNames": [
-        "com.camera.beautycam",
-        "com.king.candycrushsaga",
-        "com.king.candycrushsodasaga",
-        "com.microsoft.office.outlook",
-        "com.microsoft.office.word",
-        "com.runtastic.android",
-        "com.nianticlabs.pokemongo",
-        "com.shazam.android",
-        "com.tinder",
-        "com.trivago",
-        "com.twitter.android",
-        "com.ubercab",
-        "com.zdf.android.mediathek",
-        "de.zalando.mobile",
-        "kik.android",
-        "net.lovoo"
+        "com.babbel.mobile.android",
+        "com.booking",
+        "com.contextlogic.wish",
+        "com.discord",
+        "com.ebay.kleinanzeigen",
+        "com.ebay.mobile",
+        "com.google.android.apps.translate",
+        "com.google.android.apps.youtube.music",
+        "com.medion.alditalkactivation",
+        "com.paypal.android.p2pmobile",
+        "com.pinterest",
+        "com.ryanair.cheapflights",
+        "com.skype.raider",
+        "com.soundcloud.android",
+        "de.mcdonalds.mcdonaldsinfoapp",
+        "deezer.android.app",
+        "org.mozilla.firefox",
+        "com.android.chrome",
+        "org.telegram.messenger"
     ]
 }
