--- a/intents/config.json
+++ b/intents/config.json
@@ -1,10 +1,26 @@
 {
     "dataStore": "~/deepthought/bachelor/AndroidApks/datastore/",
-    "outputFolder": "~/deepthought/bachelor/AndroidApks/output/",
+    "outputFolder": "~/deepthought/bachelor/AndroidApks/output_2/",
     "androidSDK": "~/Android/Sdk/",
-    "intentTimeout": 3,
+    "intentTimeout": 5,
     "numberIterations": 10,
     "packageNames": [
-        "com.contextlogic.wish"
+        "com.trivago",
+        "com.twitter.android",
+        "com.ubercab",
+        "com.zdf.android.mediathek",
+        "de.zalando.mobile",
+        "kik.android",
+        "net.lovoo.android",
+        "com.king.candycrushsaga",
+        "com.king.candycrushsodasaga",
+        "com.airbnb.android",
+        "com.alien.shooter.galaxy.attack",
+        "com.amazon.mp3",
+        "com.apple.android",
+        "com.camera.beautycam",
+        "com.microsoft.office.outlook",
+        "com.microsoft.office.word",
+        "com.nianticlabs.pokemongo"
     ]
 }
