--- a/intents/config.json
+++ b/intents/config.json
@@ -5,21 +5,24 @@
     "intentTimeout": 5,
     "numberIterations": 10,
     "packageNames": [
-        "com.accuweather.android",
-        "com.adobe.pdfreader.acrobatreader.free",
-        "com.alibaba.aliexpresshd",
-        "com.amazon.mShop.android.shopping",
-        "com.audible.application",
-        "com.autoscout24",
-        "com.azarlive.android",
-        "com.instagram.android",
-        "com.snapchat.android",
-        "com.spotify.music",
-        "com.whatsapp",
-        "de.burgerking.kingfinder",
-        "de.dhl.paket",
-        "de.lieferheld.android",
-        "de.meinfernbus",
-        "tv.twitch.android.app"
+        "com.azurgames.BattleGroundRoyale",
+        "com.babbel.mobile.android.en",
+        "com.booking",
+        "com.contextlogic.wish",
+        "com.discord",
+        "com.ebay.kleinanzeigen",
+        "com.ebay.mobile",
+        "com.google.android.apps.translate",
+        "com.google.android.apps.youtube.music",
+        "com.medion.alditalkactivation",
+        "com.paypal.android.p2pmobile",
+        "com.pinterest",
+        "com.ryanair.cheapflights",
+        "com.skype.raider",
+        "com.soundcloud.android",
+        "de.mcdonalds.mcdonaldsinfoapp",
+        "deezer.android.app",
+        "org.mozilla.firefox",
+        "org.telegram.messenger"
     ]
 }
